working on the event show page

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "pages":[
-    "pages/events/events",
-    "pages/event/event"
+    "pages/event/event",
+    "pages/events/events"
   ],
   "window":{
     "backgroundTextStyle":"light",
