--- a/app.json
+++ b/app.json
@@ -7,10 +7,9 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "FitFam",
     "navigationBarTextStyle":"black"
   },
-
 
   "tabBar": {
     "backgroundColor": "#BFBFBF",
